--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@ body {
 
 .quiz {
   position: relative;
-  max-width: 800px;
+  max-width: 760px;
   margin: 0 auto;
   background: #fff;
   border-radius: 3px;
@@ -45,6 +45,7 @@ body {
 .question {
   margin: 0;
   padding: 0.5rem 2.5rem 1.5rem 2.5rem;
+  text-align: left;
 }
 
 /* AnswerOption Component */
@@ -72,7 +73,7 @@ body {
 .radioCustomLabel {
     text-align: left;
     position: relative;
-    width: 500px;
+    width: 100%;
     margin: 0;
     padding: 1.5rem 2.5rem 1.5rem 5rem;
     font-size: 16px;
