--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -1,3 +1,9 @@
-.display-3{
+.jumbotron {
+  background-color: #4DD0E1;
+  color: white;
+  margin-bottom: 30px
+}
+
+.display-3 {
 	text-align: center;
 }
