--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@ body {
 
 .quiz {
   position: relative;
-  max-width: 760px;
+  max-width: 790px;
   margin: 0 auto;
   background: #fff;
   border-radius: 3px;
@@ -44,7 +44,7 @@ body {
 /* Question Component */
 .question {
   margin: 0;
-  padding: 0.5rem 2.5rem 1.5rem 2.5rem;
+  padding: 0.5rem 2.5rem 1.0rem 2.5rem;
   text-align: left;
 }
 
@@ -81,6 +81,7 @@ body {
 }
 
 .radioCustomButton ~ .radioCustomLabel:before {
+    vertical-align: middle;
     position: absolute;
     top: 20px;
     left: 38px;
@@ -88,7 +89,6 @@ body {
     height: 28px;
     content: '';
     display: inline-block;
-    vertical-align: middle;
     background: #fff;
     border: 1px solid #bbb;
     border-radius: 50%;
@@ -100,6 +100,30 @@ body {
     background: #8BC53F url(./components/Quiz/icon-check.svg) no-repeat;
     background-size: 27px;
     border-color: #8BC53F;
+}
+
+/* Buttons*/
+.btn {
+  background-color: #FFB74D;
+  width: 130px;
+  border-color: #FFB74D;
+  margin: 1rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+}
+
+.btn:hover{
+  background-color: #FF5722;
+  border-color: #FFB74D;
+}
+
+.buttons {
+    border-top: 1px solid #eee;
+    text-align: center;
+    position: relative;
+    width: 100%;
+    margin: 0;
+    font-size: 16px;
+    line-height: 1;
 }
 
 /* Animation */
@@ -133,4 +157,3 @@ body {
     opacity: 1;
     transition: opacity 0.5s ease-in-out;
 }
-
