--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -1,14 +1,7 @@
-.navlogo {
-  max-width: 20%;
-  max-height: 20%;
-  text-align: left;
-}
-
-.lil_logo{
-	max-width: 790px;
-	margin: 0 auto;
-	margin-top: 100px;
-	margin-bottom: 3px;
+.blogo {
+  max-width: 70%;
+  max-height: 70%;
+  text-align: center;
 }
 
 @media (min-width: 769px){
