--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -11,6 +11,11 @@
   border-radius: 3px;
 }
 
-h3 {
-	text-align: left;	
+h4 {
+	text-align: left;
+	position: relative;
+	background: #fff;
+    border-top: 1px solid #eee;
+    padding: 1.5rem 2.5rem 1.5rem 1rem;
+	margin: 0 auto;
 }
