--- a/client/src/components/bootstrap/navbar/navbar.css
+++ b/client/src/components/bootstrap/navbar/navbar.css
@@ -1,5 +1,7 @@
 .jumbotron {
-  background-color: #4dd0e1;
+  /*background-color: #4dd0e1;*/
+  /*background-color: #86cbc6;*/
+  height: 200px;
 }
 
 a {
