--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,10 @@ body {
   padding: 0;
   background: #eee;
   font-family: sans-serif;
+  background-image: url("https://i.imgur.com/uk8zXRr.png");
+  background-repeat:repeat;
+  background-size: 250px 200px;
+  background-attachment: fixed;
 }
 
 .quiz {
@@ -104,8 +108,8 @@ body {
 
 /* Buttons*/
 .btn {
-  background-color: #86cbc6;
-  border-color: #86cbc6;
+  background-color: #4daea5;
+  border-color: #4daea5;
   color: #fff;
   width: 130px;
   margin: 1rem;
@@ -113,8 +117,8 @@ body {
 }
 
 .btn:hover{
-  background-color: #4daea5;
-  border-color: #4daea5;
+  background-color: #86cbc6;
+  border-color: #86cbc6;
 }
 
 .buttons {
