--- a/client/src/components/bootstrap/navbar/navbar.css
+++ b/client/src/components/bootstrap/navbar/navbar.css
@@ -1,6 +1,6 @@
 .jumbotron {
   /*background-color: #4dd0e1;*/
-  /*background-color: #86cbc6;*/
+  background-color: #dbe5e6;
   height: 200px;
 }
 
