--- a/client/src/containers/Welcome.css
+++ b/client/src/containers/Welcome.css
@@ -4,6 +4,7 @@
 	padding: 20px;
 	text-align: center;
 	overflow-wrap: break-word;
+	hyphens: auto;
 }
 
 .takeQuiz {
@@ -14,12 +15,13 @@
 }
 
 .quizbtn {
-	width: 60%;
+	width: 40%;
 	color: #ccc;
 	font-size: 1.5rem;
 	background-color: #4daea5;
 	border-color: #4daea5;
 	color: #fff;
+	text-align: center;
 }
 
 .quizbtn:hover{
